Fix empty hostname in list of local names. Use a properly scoped variable: postfix_send_only_postmaster_email for postmaster_email Update docs.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,7 +15,7 @@
     - postfix
 
 - name: configure /etc/aliases to forward root's email
-  lineinfile: dest=/etc/aliases regexp="^root:.*" line="root:{{ postmaster_email }}"
+  lineinfile: dest=/etc/aliases regexp="^root:.*" line="root:{{ postfix_send_only_postmaster_email }}"
   tags:
     - postfix
 
