Create /etc/mailname, fix some deprecations

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,25 +1,23 @@
 ---
 
 - name: Install packages for postfix
-  apt: pkg={{ item }} state=latest
-  with_items:
-    - postfix
-  tags:
-    - postfix
+  apt: pkg=postfix state=latest
 
 - name: Setup a sending only mail server via main.cf
   template: src=main.cf.j2 dest=/etc/postfix/main.cf owner=root group=root mode=0644
   notify:
     - restart postfix
-  tags:
-    - postfix
+
+- name: Install /etc/mailname
+  copy:
+    content: "{{postfix_send_only_hostname}}{{'\n'}}"
+    dest: /etc/mailname
+    owner: root
+    group: root
+    mode: 0644
 
 - name: configure /etc/aliases to forward root's email
   lineinfile: dest=/etc/aliases regexp="^root:.*" line="root:{{ postfix_send_only_postmaster_email }}"
-  tags:
-    - postfix
 
 - name: rebuild /etc/aliases
   action: command /usr/bin/newaliases
-  tags:
-    - postfix
