--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,17 +3,17 @@ galaxy_info:
   author: Weston Triemstra
   description: Install and configure a send-only postfix
   company: Netsign
+  role_name: postfix_send_only
+  namespace: thermistor
 
   license: MIT
 
-  min_ansible_version: 2.0
+  min_ansible_version: '2.16'
 
   platforms:
     - name: Ubuntu
       versions:
-        - trusty
-        - xenial
-        - bionic
+        - jammy
 
   galaxy_tags:
     - postfix
